<resources>
    <string name="app_name">EmotionDiary</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string name="sunday">日</string>
    <string name="monday">一</string>
    <string name="thesday">二</string>
    <string name="wednesday">三</string>
    <string name="thursday">四</string>
    <string name="friday">五</string>
    <string name="saturday">六</string>
</resources>
